Bagna cauda terminada

--- a/recipes/Bañacauda.html
+++ b/recipes/Bañacauda.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bañacauda</title>
-</head>
-<body>
-    <h1>Bañacauda</h1>
-    <img src="../imagenes/Bagnacauda.jpg" alt="Bañacauda">
-    <p></p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Bañacauda</title>
+    </head>
+    <body>
+        <h1>Bañacauda</h1>
+        <img src="../imagenes/Bagnacauda.jpg" alt="Bañacauda">
+        <h3>La Bagna cauda es el plato tipico por exelencia de Piamonte, Italia </h3>
+        <p>Se origina en la zona Bajo Piamonte, Monferrato, y segun la tradicion se consumia despues de la fatiga de la
+        vendimia t la vinificacion</p>
+        <p>En Argentina es frecuente que en los dias frios, sobre todo en zonas rurales, se coma este plato a modo Saluzzese, es
+        decir, con la salsa con una base de crema de leche y no tanto aceite de oliva</p>    
+
+            <h4>Ingredientes</h4>
+
+        <ul>
+            <li>5 dientes de ajo</li>
+            <li>5 anchoas</li>
+            <li>Aceite extra</li>
+            <li>1/2 lt. de crema de leche</li>
+            <li>1 puñado de nueces</li>
+        </ul>    
+
+            <h4>Pasos</h4>
+        <ol>
+            <li>Pelar Ajos y quitar el brote del medio. Colocarlos en el vaso de la licuadora</li>
+            <li>Agregar una anchoa para cada diente deajo, agragar una cucharada de aceite de oliva y triturar hasta obtener una pasta</li>
+            <li>Colocar pasta en una olla antihaderente y cocinar a fuego minimo</li>
+            <li>Luego de unos minutos la pasta cambiara de ccolor a uno mas oscuro, en ese momento agregamos crema de leche.Seguir cocinando a fuego minimo</li>
+            <li>Agregar un puñado de nueces picadas y cocinar un poco mas hasta que la crema reduzca un poco</li>
+        </ol>
+            
+
+
+    </body>
 </html>
