--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/Bañacauda.html">Bañacauda</a>
-    
+    <ul>
+    <li><a href="./recipes/Bañacauda.html">Bañacauda</a></li>
+        
+    </ul>
 
 </body>
 </html>
