--- a/recipes/Bañacauda.html
+++ b/recipes/Bañacauda.html
@@ -14,7 +14,7 @@
         decir, con la salsa con una base de crema de leche y no tanto aceite de oliva</p>    
 
             <h4>Ingredientes</h4>
-
+            <!--Lista de ingredientes-->
         <ul>
             <li>5 dientes de ajo</li>
             <li>5 anchoas</li>
@@ -24,12 +24,13 @@
         </ul>    
 
             <h4>Pasos</h4>
+            <!--Lista de pasos -->
         <ol>
-            <li>Pelar Ajos y quitar el brote del medio. Colocarlos en el vaso de la licuadora</li>
+            <li><strong>Pelar Ajos</strong> y quitar el brote del medio. Colocarlos en el vaso de la licuadora</li>
             <li>Agregar una anchoa para cada diente deajo, agragar una cucharada de aceite de oliva y triturar hasta obtener una pasta</li>
-            <li>Colocar pasta en una olla antihaderente y cocinar a fuego minimo</li>
+            <li>Colocar pasta en una olla <strong>antihaderente</strong> y cocinar a fuego minimo</li>
             <li>Luego de unos minutos la pasta cambiara de ccolor a uno mas oscuro, en ese momento agregamos crema de leche.Seguir cocinando a fuego minimo</li>
-            <li>Agregar un puñado de nueces picadas y cocinar un poco mas hasta que la crema reduzca un poco</li>
+            <li>Agregar un puñado de nueces picadas y cocinar un poco mas hasta que la crema <em>se reduzca un poco</em></li>
         </ol>
             
 
