--- a/recipes/Milanesas.html
+++ b/recipes/Milanesas.html
@@ -10,15 +10,15 @@
 
     <h4>La milanesa es un filete que se cocina frito o al horno</h4>
 
-    <p>Se llama <strong>milanesa</strong>a cualquier rebanada de un ingrediente rebozado y cocidode manera similar, por lo que
-    existe milanesas de <em>cerdo</em>,de <em>pollo</em>,de <em>soja</em>, entre otros ingredientes</p>
-    <p>Si bien su nombre proviene de la ciudad italiana de <strong>Milan</strong>el origen especidico de la preparacion es disputado
-    ,ya que en el siglo xix en España se cibicua cini chuketas de ternera a la milanesa indicandosela como de origen italiano</p>
+    <p>Se llama <strong>milanesa</strong> a cualquier rebanada de un ingrediente rebozado y cocinado de manera similar, por lo que
+    existen milanesas de <em>cerdo</em>, de <em>pollo</em>, de <em>soja</em>, entre otros ingredientes.</p>
+    <p>Si bien su nombre proviene de la ciudad italiana de <strong>Milan</strong> el origen especifico de la preparacion es disputado
+    ,ya que en el siglo xix en España se conocia como chuletas de ternera a la milanesa indicandosela como de origen italiano.</p>
 
     <!--Lista de ingredientes de la milanesa-->
 
     <ul>
-        <li>Filete de la carne a utliziar</li>
+        <li>Filetes a utliziar</li>
         <li>Huevos</li>
         <li>Pan rallado</li>
         <li>Aceite</li>
@@ -27,7 +27,10 @@
     <!--Lista de pasos de la receta-->
 
     <ol>
-        <li></li>
+        <li>Pasar los filetes sobre el huevo </li>
+        <li>Luego pasarlos sobre el pan rallado para que se forme la capa externa de la milanesa</li>
+        <li>Repetir estos 2 primeros pasos <strong>una vez <em>mas</em></strong></li>
+        <li>Fritar la milanesa en una olla con aceite bien caliente, a fuego fuerte</li>
     </ol>
 
 </body>
