--- a/recipes/Bañacauda.html
+++ b/recipes/Bañacauda.html
@@ -9,9 +9,9 @@
         <img src="../imagenes/Bagnacauda.jpg" alt="Bañacauda">
         <h3>La Bagna cauda es el plato tipico por exelencia de Piamonte, Italia </h3>
         <p>Se origina en la zona Bajo Piamonte, Monferrato, y segun la tradicion se consumia despues de la fatiga de la
-        vendimia t la vinificacion</p>
+        vendimia y la vinificacion.</p>
         <p>En Argentina es frecuente que en los dias frios, sobre todo en zonas rurales, se coma este plato a modo Saluzzese, es
-        decir, con la salsa con una base de crema de leche y no tanto aceite de oliva</p>    
+        decir, con la salsa con una base de crema de leche y no tanto aceite de oliva.</p>    
 
             <h4>Ingredientes</h4>
             <!--Lista de ingredientes-->
@@ -27,9 +27,9 @@
             <!--Lista de pasos -->
         <ol>
             <li><strong>Pelar Ajos</strong> y quitar el brote del medio. Colocarlos en el vaso de la licuadora</li>
-            <li>Agregar una anchoa para cada diente deajo, agragar una cucharada de aceite de oliva y triturar hasta obtener una pasta</li>
+            <li>Agregar una anchoa para cada diente de ajo, agregar una cucharada de aceite de oliva y triturar hasta obtener una pasta</li>
             <li>Colocar pasta en una olla <strong>antihaderente</strong> y cocinar a fuego minimo</li>
-            <li>Luego de unos minutos la pasta cambiara de ccolor a uno mas oscuro, en ese momento agregamos crema de leche.Seguir cocinando a fuego minimo</li>
+            <li>Luego de unos minutos la pasta cambiara de color a uno mas oscuro, en ese momento agregamos crema de leche. Seguir cocinando a fuego minimo</li>
             <li>Agregar un puñado de nueces picadas y cocinar un poco mas hasta que la crema <em>se reduzca un poco</em></li>
         </ol>
             
