Ultima receta terminada

--- a/recipes/Asado.html
+++ b/recipes/Asado.html
@@ -9,10 +9,33 @@
 
     <body>
         <h1>Asado</h1>
+        <img src="../imagenes/Asado.jpg" alt="Asado a la parrilla">
 
+        <h4>EL asado es una comida en la cual los alimentos son expuestos al calor de las brasas para que se cocinen lentamente</h4>
 
+        <p>Un método frecuente de preparar un asado es el de la <strong>parrilla</strong>, donde las carnes se cocinan horizontalmente. Sin embargo, también es posible asar mediante otros métodos. Otro utensilio usado para asar es el <em>espiedo</em>, un asta o pica metálica en la que se pinchan los alimentos. 
+        Puede utilizarse un espiedo grande para asar un animal entero (cordero, cerdo, vaca) o espiedos pequeños para asar pollos o trozos de carne.</p>
 
+        <p>En México, Argentina, Uruguay, Bolivia, Chile, Colombia, Costa Rica, Ecuador, Paraguay, Perú, Honduras, Venezuela y España se entiende por asado no solo al método de cocción, sino también a la parrillada, el acto social de comer carnes (blancas y rojas) o choripanes. 
+        Además tanto en Argentina como en Uruguay también se conoce como asado a la <strong>tira de asado</strong>, el corte de carne que es el ingrediente principal de esta comida.</p>
 
+            <!--Lista ingredientes asado-->
+
+        <ul>
+            <li>Carnes o verduras a asar.</li>
+            <li>Carbon o leña.</li>
+            <li>Sal parrillera o sal gruesa.</li>
+        </ul>
+        
+        <!--Lista de pasos para el asado-->
+
+        <ol>
+            <li>Salpimentar la carne.</li>
+            <li>Comenzar el fuego con el carbon o leña.</li>
+            <li>Una vez formada las brasas, colocarlas debajo de la parrilla.</li>
+            <li>Colocar las carnes en la parrilla y dejar cocinar.</li>
+            <li>Dar vuelta la carne cuando su parte expuesta a las brasas este cocida.</li>
+        </ol>
 
 
     </body>
