--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     
-    <h1>Odin Recipes</h1>
+    <h1 class="encabezado">Odin Recipes</h1>
     
-    <ul>
-    <li><a href="./recipes/Bañacauda.html">Bañacauda</a></li>
-    <li><a href="./recipes/Milanesas.html">Milanesas</a></li>   
-    <li><a href="./recipes/Asado.html">Asado</a></li>
+    <ul class="links">
+    <li class="link-1"><a href="./recipes/Bañacauda.html" class="uno">Bañacauda</a></li>
+    <li class="link-2"><a href="./recipes/Milanesas.html" class="dos">Milanesas</a></li>   
+    <li class="link-3"><a href="./recipes/Asado.html" class="tres">Asado</a></li>
     </ul>
 
 </body>
